; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/mpc85xx/extr_mpc85xx.c_mpc85xx_is_qoriq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/mpc85xx/extr_mpc85xx.c_mpc85xx_is_qoriq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FSL_E500mc = common dso_local global i64 0, align 8
@FSL_E5500 = common dso_local global i64 0, align 8
@FSL_E6500 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mpc85xx_is_qoriq() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = call i32 (...) @mfpvr()
  %4 = ashr i32 %3, 16
  %5 = sext i32 %4 to i64
  store i64 %5, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @FSL_E500mc, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %17, label %9

9:                                                ; preds = %0
  %10 = load i64, i64* %2, align 8
  %11 = load i64, i64* @FSL_E5500, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %17, label %13

13:                                               ; preds = %9
  %14 = load i64, i64* %2, align 8
  %15 = load i64, i64* @FSL_E6500, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13, %9, %0
  store i32 1, i32* %1, align 4
  br label %19

18:                                               ; preds = %13
  store i32 0, i32* %1, align 4
  br label %19

19:                                               ; preds = %18, %17
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i32 @mfpvr(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
